<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  	<!-- 
  		HC-05 "00:15:FF:F3:D4:1D"  
  		HC-06 "20:13:07:01:05:40"
  	-->
    <EditTextPreference android:key="bt-address" android:title="@string/device_address" android:defaultValue="20:13:07:01:05:40"></EditTextPreference>
    <EditTextPreference android:key="servo-min" android:title="@string/servo_min" android:defaultValue="65" android:numeric="integer"></EditTextPreference>
    <EditTextPreference android:key="servo-max" android:title="@string/servo_max" android:defaultValue="115" android:numeric="integer"></EditTextPreference>
    <EditTextPreference android:key="throttle-dead-zone" android:title="@string/throttle_dead_zone" android:defaultValue="35" android:numeric="integer"></EditTextPreference>
    
    <EditTextPreference android:key="low-pass-filter" android:title="@string/low_pass_filter" android:defaultValue="0.2" android:numeric="decimal"></EditTextPreference>
    <EditTextPreference android:key="servo-rate" android:title="@string/servo_rate" android:defaultValue="3.5" android:numeric="decimal"></EditTextPreference> 
    <EditTextPreference android:key="throttle-rate" android:title="@string/throttle_rate" android:defaultValue="3.5" android:numeric="decimal"></EditTextPreference>
</PreferenceScreen>
